Dictionary CommandLine ver 2